Fix label stretch. More info on hover

--- a/style/datavis.scss
+++ b/style/datavis.scss
@@ -154,7 +154,7 @@ text {
 
 	li {
 		padding: .5em 0;
-		flex: 1 1 8em;
+		width: 8em;
 	}
 }
 
